map overflow bug fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,9 +112,10 @@ blockquote {
 #mapDiv {
     width: 100% !important;
     height: 100% !important;
-    width: calc(100% - 0px) !important;
-    height: calc(100% - 0px) !important;
+    /* width: calc(100% - 0px) !important; */
+    /* height: calc(100% - 0px) !important; */
     background-color: white;
+    /* overflow:  hidden; */
 }
 
 .loading-indicator {
@@ -1089,9 +1090,9 @@ h3 {
 }
 
 html, body {
-    width: 100%; 
-    height: 100%; 
-    margin: 0; 
+    width: 100%;
+    height: 100%;
+    margin: 0;
     overflow:hidden;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -1104,17 +1105,7 @@ html, body {
     height: 100%;
 }
 
-.claro .dijitSplitterV {
-background: white;
-    border-color: white;
-    border-width: 1.5px;
-    border-style: solid;
-    border-top-style: none;
-    border-bottom-style: none;
-    width: 10px;
-    margin: 0;
-    -webkit-tap-highlight-color: transparent;
-}
+.claro .dijitSplitterV {background: white;border-color: white;border-width: 1.5px;border-style: solid;border-top-style: none;border-bottom-style: none;width: 10px;margin: 0;-webkit-tap-highlight-color: transparent;}
 
 .claro .dijitSplitterH, 
 .claro .dijitGutterH {
@@ -1880,7 +1871,7 @@ myKey {
 }
 
 #dijit_layout_ContentPane_2 {
-  padding: 0.5px !important;
+  overflow:  hidden;
 }
 
 #vSplitterTools {
